--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Portfólio</title>
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
     
